--- a/src/Pages/App/App.css
+++ b/src/Pages/App/App.css
@@ -1,10 +1,32 @@
 .App {
   text-align: center;
+  background-color: red !important;
 }
 
 .App-logo {
   height: 40vmin;
   pointer-events: none;
+}
+
+button{
+  /* background-color: #0a424a; */
+  background-color: #0a424a;
+  color: white;
+  padding: 10px 20px;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  font-size: 20px;
+  margin: 10px;
+
+}
+
+.container {
+  display: flex;
+  justify-content: space-evenly;
+  /* align-items: center; */
+  /* height: 100vh; */
+  
 }
 
 @media (prefers-reduced-motion: no-preference) {
